--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             <div class="temperature-description">Hot</div>
         </div>
+        <script src='config.js' async defer></script>
         <script src="app.js" async defer></script>
     </body>
 </html>
