--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
        <div class="location">
            <h1 class="location-timezone">Timezone</h1>
-           <p>Icon</p>
+           <p class="weather-icon-p"><img class="weather-icon" src=""></p>
        </div>
         <div class="temperature">
             <div class="temperature-degree_div">
