Source is prepared to start CSS art

--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-       <div class="location">
-           <h1 class="location-timezone">Timezone</h1>
-           <p class="weather-icon-p"><img class="weather-icon" src=""></p>
+       <div class="catalina-mountains">
+           
        </div>
-        <div class="temperature">
+       
+        <div class="city-of-tucson">
+
+            <h1 class="tucson-title">Tucson</h1>
+
+            <p class="weather-icon-p"><img class="weather-icon" src=""></p>
+
             <div class="temperature-degree_div">
+
                 <h2 class="temperature-degree_value">34</h2>
+
                 <span class="temperature-degree_unit">F</span>
+
             </div>
+
             <div class="temperature-description">Hot</div>
+
         </div>
+
         <script src='config.js' async defer></script>
         <script src="app.js" async defer></script>
     </body>
